--- a/Week-1/Exercise1.2/index.html
+++ b/Week-1/Exercise1.2/index.html
@@ -5,29 +5,32 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./stylesheets/index.css" />
+  <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" />
   <title>Cattyboard</title>
 </head>
 <body>
-  <div class="container">
-    <aside>
-      <nav>
-        <ul>
-          <li>A</li>
-          <li>A</li>
-          <li>A</li>
-          <li>A</li>
-          <li>A</li>
-          <li>A</li>
-          <li>A</li>
-          <li>A</li>
+  <div class="page-container">
+    <aside class="side-menu">
+      <nav class="side-menu">
+        <ul class="side-menu-list">
+          <li><i class="las la-bars"></i></li>
+          <li><i class="las la-home"></i></li>
+          <li><i class="las la-search"></i></li>
+          <li><i class="las la-volume-up"></i></li>
+          <li><i class="las la-user"></i></li>
+          <li><i class="lab la-spotify"></i></li>
+          <li><i class="las la-cog"></i></li>
+          <li><i class="lab la-soundcloud"></i></li>
         </ul>
       </nav>
     </aside>
     <div>
       <h1>b</h1>
     </div>
-
   </div>
+  <footer>
+    c
+  </footer>
   
   
 </body>
