chore: add hero section

--- a/Week-1/Exercise1.2/index.html
+++ b/Week-1/Exercise1.2/index.html
@@ -24,8 +24,27 @@
         </ul>
       </nav>
     </aside>
-    <div>
-      <h1>b</h1>
+    <div class="content-container">
+      <div class="hero-container">
+        <div class="image-container">
+          <img src="https://vif1g.csb.app/src/assets/cattyboard.jpg" alt="Cattyboard hot 100" />
+        </div>
+        <div class="control-container">
+          <div class="album-detail">
+            <h1>CattyBoard Top 100 Single Charts (11.06.36)</h1>
+            <p>Unknown Artist</p>
+            <p>2016.Charts.100songs</p>
+          </div>
+          <div class="menu-container">
+            <ul>
+              <li><label><i class="las la-play"></i>Play all</label></li>
+              <li><label><i class="las la-plus"></i>Add to</label></li>
+              <li><label><i class="las la-ellipsis-h"></i>More</label></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="table-container"></div>
     </div>
   </div>
   <footer>
