chore: add footer section

--- a/Week-1/Exercise1.2/index.html
+++ b/Week-1/Exercise1.2/index.html
@@ -9,7 +9,7 @@
   <title>Cattyboard</title>
 </head>
 <body>
-  <div class="page-container">
+  <section class="page-container">
     <aside class="side-menu">
       <nav class="side-menu">
         <ul class="side-menu-list">
@@ -44,11 +44,29 @@
           </div>
         </div>
       </div>
-      <div class="table-container"></div>
+      <div class="table-container">
+      </div>
     </div>
-  </div>
-  <footer>
-    c
+  </section>
+  <footer class="footer-container">
+    <section class="player-container">
+      <div class="player-image-container">
+        <img src="https://vif1g.csb.app/src/assets/cattyboard.jpg" alt="Cattyboard hot 100" />
+      </div>
+      <div class="player-content">
+        <p>If It Ain't Love</p>
+        <p>Catson Derulo</p>
+      </div>
+    </section>
+    <section class="control-container">
+      <ul class="player-control">
+        <li><i class="las la-step-backward"></i></li>
+        <li><i class="las la-pause"></i></li>
+        <li><i class="las la-step-forward"></i></li>
+        <li><i class="las la-redo-alt"></i></li>
+        <li><i class="las la-random"></i></li>
+      </ul>
+    </section>
   </footer>
   
   
