--- a/Week-1/Exercise1.2/index.html
+++ b/Week-1/Exercise1.2/index.html
@@ -45,6 +45,32 @@
         </div>
       </div>
       <div class="table-container">
+        <table>
+          <tr>
+            <td>1. One Dance</td>
+            <td>Crake feat CatKid & Cyla</td>
+            <td>2:54</td>
+            <td><button>CATTY CLOUD SYNC</button></td>
+          </tr>
+          <tr>
+            <td>2. Panda</td>
+            <td>Cattee</td>
+            <td>4:06</td>
+            <td><button>CATTY CLOUD SYNC</button></td>
+          </tr>
+          <tr>
+            <td>3. Can't Stop the Feeling!</td>
+            <td>Catin Climberlake</td>
+            <td>3:56</td>
+            <td><button>CATTY CLOUD SYNC</button></td>
+          </tr>
+          <tr>
+            <td>4. Work From Home</td>
+            <td>Cat Harmony feat Colla</td>
+            <td>3:34</td>
+            <td><button>CATTY CLOUD SYNC</button></td>
+          </tr>
+        </table>
       </div>
     </div>
   </section>
