--- a/Week-1/Exercise1.2/index.html
+++ b/Week-1/Exercise1.2/index.html
@@ -12,16 +12,16 @@
   <section class="page-container">
     <aside class="side-menu">
       <nav class="side-menu">
-        <ul class="side-menu-list">
-          <li><i class="las la-bars"></i></li>
-          <li><i class="las la-home"></i></li>
-          <li><i class="las la-search"></i></li>
-          <li><i class="las la-volume-up"></i></li>
-          <li><i class="las la-user"></i></li>
-          <li><i class="lab la-spotify"></i></li>
-          <li><i class="las la-cog"></i></li>
-          <li><i class="lab la-soundcloud"></i></li>
-        </ul>
+        <div class="side-menu-list">
+          <span><i class="las la-bars"></i></span>
+          <span><i class="las la-home"></i></span>
+          <span><i class="las la-search"></i></span>
+          <span><i class="las la-volume-up"></i></span>
+          <span><i class="las la-user"></i></span>
+          <span><i class="lab la-spotify"></i></span>
+          <span><i class="las la-cog"></i></span>
+          <span><i class="lab la-soundcloud"></i></span>
+        </div>
       </nav>
     </aside>
     <div class="content-container">
@@ -85,13 +85,13 @@
       </div>
     </section>
     <section class="control-container">
-      <ul class="player-control">
-        <li><i class="las la-step-backward"></i></li>
-        <li><i class="las la-pause"></i></li>
-        <li><i class="las la-step-forward"></i></li>
-        <li><i class="las la-redo-alt"></i></li>
-        <li><i class="las la-random"></i></li>
-      </ul>
+      <div class="player-control">
+        <span><i class="las la-step-backward"></i></span>
+        <span><i class="las la-pause"></i></span>
+        <span><i class="las la-step-forward"></i></span>
+        <span><i class="las la-redo-alt"></i></span>
+        <span><i class="las la-random"></i></span>
+      </div>
     </section>
   </footer>
   
