fix: header control and add image for workflow

--- a/Week-1/Exercise1.2/index.html
+++ b/Week-1/Exercise1.2/index.html
@@ -36,11 +36,11 @@
             <p>2016.Charts.100songs</p>
           </div>
           <div class="menu-container">
-            <ul>
-              <li><label><i class="las la-play"></i>Play all</label></li>
-              <li><label><i class="las la-plus"></i>Add to</label></li>
-              <li><label><i class="las la-ellipsis-h"></i>More</label></li>
-            </ul>
+            <div>
+              <span><label><i class="las la-play"></i>Play all</span></li>
+              <span><label><i class="las la-plus"></i>Add to</span></li>
+              <span><label><i class="las la-ellipsis-h"></i>More</span></li>
+            </div>
           </div>
         </div>
       </div>
